--- a/Kongres.Api/Kongres.Api.Infrastructure/Kongres.Api.Infrastructure.csproj
+++ b/Kongres.Api/Kongres.Api.Infrastructure/Kongres.Api.Infrastructure.csproj
@@ -1,5 +1,9 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
+  <ItemGroup>
+    <ProjectReference Include="..\Kongres.Api.Application\Kongres.Api.Application.csproj" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
