--- a/Kongres.Api/Kongres.Api.WebApi/Kongres.Api.WebApi.csproj
+++ b/Kongres.Api/Kongres.Api.WebApi/Kongres.Api.WebApi.csproj
@@ -1,5 +1,10 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
+  <ItemGroup>
+    <ProjectReference Include="..\Kongres.Api.Application\Kongres.Api.Application.csproj" />
+    <ProjectReference Include="..\Kongres.Api.Infrastructure\Kongres.Api.Infrastructure.csproj" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
