--- a/Kongres.Api/Kongres.Api.Infrastructure/Kongres.Api.Infrastructure.csproj
+++ b/Kongres.Api/Kongres.Api.Infrastructure/Kongres.Api.Infrastructure.csproj
@@ -1,7 +1,15 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <ItemGroup>
-    <ProjectReference Include="..\Kongres.Api.Application\Kongres.Api.Application.csproj" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.10">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="3.2.4" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Kongres.Api.Domain\Kongres.Api.Domain.csproj" />
   </ItemGroup>
 
   <PropertyGroup>
