Move connection string into appsettings

--- a/Kongres.Api/Kongres.Api.WebApi/appsettings.json
+++ b/Kongres.Api/Kongres.Api.WebApi/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Database": {
+    "ConnectionString": "Server=localhost; Database=Kongres; Uid=root; Pwd=SecretPassword!123;"
+  }
 }
