Add Autofac, MediatR, Automapper

--- a/Kongres.Api/Kongres.Api.Application/Kongres.Api.Application.csproj
+++ b/Kongres.Api/Kongres.Api.Application/Kongres.Api.Application.csproj
@@ -4,6 +4,11 @@
     <ProjectReference Include="..\Kongres.Api.Domain\Kongres.Api.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Autofac" Version="6.0.0" />
+    <PackageReference Include="MediatR" Version="9.0.0" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
