--- a/Kongres.Api/Kongres.Api.WebApi/Kongres.Api.WebApi.csproj
+++ b/Kongres.Api/Kongres.Api.WebApi/Kongres.Api.WebApi.csproj
@@ -6,6 +6,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Autofac" Version="6.0.0" />
+    <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="7.1.0" />
+    <PackageReference Include="MediatR" Version="9.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.SpaServices.Extensions" Version="3.1.10" />
   </ItemGroup>
 
