--- a/web-client/package.json
+++ b/web-client/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@hookform/resolvers": "^1.1.2",
     "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.11.2",
     "@testing-library/jest-dom": "^5.11.5",
     "@testing-library/react": "^11.1.1",
     "@testing-library/user-event": "^12.2.0",
