--- a/web-client/package.json
+++ b/web-client/package.json
@@ -6,6 +6,7 @@
     "@hookform/resolvers": "^1.1.2",
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.57",
     "@testing-library/jest-dom": "^5.11.5",
     "@testing-library/react": "^11.1.1",
     "@testing-library/user-event": "^12.2.0",
