Register participant with picture

--- a/Kongres.Api/Kongres.Api.Application/Kongres.Api.Application.csproj
+++ b/Kongres.Api/Kongres.Api.Application/Kongres.Api.Application.csproj
@@ -2,6 +2,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Kongres.Api.Domain\Kongres.Api.Domain.csproj" />
+    <ProjectReference Include="..\Kongres.Api.Infrastructure\Kongres.Api.Infrastructure.csproj" />
   </ItemGroup>
 
   <ItemGroup>
