--- a/Kongres.Api/Kongres.Api.Infrastructure/Kongres.Api.Infrastructure.csproj
+++ b/Kongres.Api/Kongres.Api.Infrastructure/Kongres.Api.Infrastructure.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
@@ -11,6 +11,10 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Kongres.Api.Domain\Kongres.Api.Domain.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <FrameworkReference Include="Microsoft.AspNetCore.App" />
   </ItemGroup>
 
   <PropertyGroup>
