--- a/Kongres.Api/Kongres.Api.Domain/Kongres.Api.Domain.csproj
+++ b/Kongres.Api/Kongres.Api.Domain/Kongres.Api.Domain.csproj
@@ -3,4 +3,8 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Caching.Abstractions" Version="1.1.0" />
+  </ItemGroup>
 </Project>
