--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -26,6 +26,9 @@ jobs:
         with:
           dotnet-version: 3.1.403
 
+      - name: Clean
+        run: dotnet clean ./Kongres.Api.sln --configuration Release && dotnet nuget locals all --clear
+        working-directory: ${{env.working-directory}}
       - name: Install dependencies
         run: dotnet restore
         working-directory: ${{env.working-directory}}
