--- a/Kongres.Api/Kongres.Api.Application/Kongres.Api.Application.csproj
+++ b/Kongres.Api/Kongres.Api.Application/Kongres.Api.Application.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="MediatR" Version="9.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.10" />
     <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
+    <PackageReference Include="NETCore.MailKit" Version="2.0.3" />
   </ItemGroup>
 
   <PropertyGroup>
