--- a/Kongres.Api/Kongres.Api.WebApi/appsettings.json
+++ b/Kongres.Api/Kongres.Api.WebApi/appsettings.json
@@ -22,6 +22,6 @@
   "Email": {
     "Server": "127.0.0.1",
     "SenderName": "Scienture",
-    "SenderEmail": "no-reply@Scienture.com"
+    "SenderEmail": "noreply@Scienture.com"
   }
 }
