--- a/Kongres.Api/Kongres.Api.WebApi/appsettings.json
+++ b/Kongres.Api/Kongres.Api.WebApi/appsettings.json
@@ -21,7 +21,7 @@
   },
   "Email": {
     "Server": "127.0.0.1",
-    "SenderName": "Scienture",
-    "SenderEmail": "noreply@Scienture.com"
+    "SenderName": "Scienture conference",
+    "SenderEmail": "noreply@scientureconf.com"
   }
 }
