Add gallery and display photos

--- a/web-client/package.json
+++ b/web-client/package.json
@@ -10,14 +10,17 @@
     "@testing-library/jest-dom": "^5.11.5",
     "@testing-library/react": "^11.1.1",
     "@testing-library/user-event": "^12.2.0",
+    "array-move": "^3.0.1",
     "axios": "^0.21.1",
     "material-ui-search-bar": "^1.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-hook-form": "6.9.2",
     "react-pdf": "^5.1.0",
+    "react-photo-gallery": "^8.0.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
+    "react-sortable-hoc": "^1.11.0",
     "web-vitals": "^0.2.4",
     "yup": "^0.32.8"
   },
