--- a/Kongres.Api/Kongres.Api.WebApi/appsettings.json
+++ b/Kongres.Api/Kongres.Api.WebApi/appsettings.json
@@ -1,4 +1,4 @@
-{
+﻿{
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -18,5 +18,16 @@
     "Issuer": "localhost:5001",
     "Audience": "localhost:5001",
     "MinutesToExpire": 5
+  },
+  "StagesTime": {
+    "StaticDeadlines": {
+      "EndOfRegister": "18/01/21 13:08 +1:00",
+      "EndOfCorrectingWork": "01/02/21 13:08 +1:00",
+      "EndOfLastTurnReviewing": "04/02/21 13:08 +1:00"
+    },
+    "DynamicDeadlines": {
+      "NewVersionDaysToDeadline": "5",
+      "NewReviewDaysToDeadline": "5"
+    }
   }
 }
