--- a/Kongres.Api/Tests/Kongres.Api.Tests.Unit/Kongres.Api.Tests.Unit.csproj
+++ b/Kongres.Api/Tests/Kongres.Api.Tests.Unit/Kongres.Api.Tests.Unit.csproj
@@ -21,6 +21,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\..\Kongres.Api.Application\Kongres.Api.Application.csproj" />
+    <ProjectReference Include="..\..\Kongres.Api.Domain\Kongres.Api.Domain.csproj" />
   </ItemGroup>
 
 </Project>
