--- a/Kongres.Api/Tests/Kongres.Api.Tests.Unit/Kongres.Api.Tests.Unit.csproj
+++ b/Kongres.Api/Tests/Kongres.Api.Tests.Unit/Kongres.Api.Tests.Unit.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="FluentAssertions" Version="5.10.3" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.10" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.5.0" />
     <PackageReference Include="Moq" Version="4.16.0" />
     <PackageReference Include="xunit" Version="2.4.0" />
